# Grey

./: README.md  pyproject.toml
src/agents/ingester/: graph.py  model.py  state.py
src/agents/ingester/nodes/: check.py
src/agents/ingester/nodes/researcher/: prompt.py  reseacher.py
src/agents/planner/: __init__.py  graph.py  model.py  prompt.py  state.py
src/agents/planner/nodes/: plan.py
src/memory/: lock.py
src/orchestration/: graph.py  router.py  state.py
