[project]
name = "grey"
version = "0.1.0"
description = "An agentic framework for research and knowledge management, based on langgraph and cognee."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
]
